--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Suivez votre préparation au Tage Mage",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1E40AF",
-  "theme_color": "#1E40AF",
+  "background_color": "#FAFAFA",
+  "theme_color": "#F59E0B",
   "orientation": "portrait-primary",
   "icons": [
     {
